css/parser/tests/errors/escaped/broken-1/output.stderr
error: Expected "}"
 --> $DIR/tests/errors/escaped/broken-1/input.css:3:2
  |
3 | }
  |  ^

